Fix text color in login modal in dark mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -41,10 +41,6 @@ html {
     background-color: var(--color-base-100);
 }
 
-.modal {
-    color: initial !important;
-}
-
 .btn {
     border-radius: 0.75rem;
 }
